crates/strider/tests/snapshots/v3__x64__calls__pass_through.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x4011d0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v6" [label="Post Call\nRAX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v6" [color="#888888", style=dashed];
  "v6" -> "5" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "v7" [label="Post Call\nRDX", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v7" [color="#888888", style=dashed];
  "v7" -> "5" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "v8" [label="Post Call\nXMM0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v8" [color="#888888", style=dashed];
  "v8" -> "5" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "v9" [label="Post Call\nXMM1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "5" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "10" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x4012d9:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "11" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nRSP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
